force-app/main/default/objects/maps__ArcGISBatchPushLog__c/maps__ArcGISBatchPushLog__c.object-meta.xml
<CustomObject>
    <label>Maps ArcGIS Batch Push Log</label>
    <nameField>
        <label>Maps ArcGIS Batch Push Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps ArcGIS Batch Push Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>