force-app/main/default/objects/maps__ArcGISBatchPushLog__c/fields/maps__Log__c.field-meta.xml
<CustomField>
    <fullName>maps__Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>