force-app/main/default/objects/maps__ArcGISBatchPushLog__c/fields/maps__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>maps__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>