force-app/main/default/objects/maps__ArcGISBatchPushLog__c/fields/maps__RecordID__c.field-meta.xml
<CustomField>
    <fullName>maps__RecordID__c</fullName>
    <label>RecordID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>