force-app/main/default/objects/maps__ArcGISBatchPushLog__c/fields/maps__Success__c.field-meta.xml
<CustomField>
    <fullName>maps__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>