force-app/main/default/objects/maps__ArcGISBatchPushLog__c/fields/maps__Time__c.field-meta.xml
<CustomField>
    <fullName>maps__Time__c</fullName>
    <label>Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>